--- a/css/header.css
+++ b/css/header.css
@@ -35,6 +35,7 @@ header {
     align-items: center;
     box-shadow: 0 15px 15px rgba(0, 0, 0, 0.05);
     font-size: 1.25em;
+    background-color: #fffaf0;
 }
 
 .group {
@@ -214,7 +215,7 @@ header ul li a:hover::before {
 .autocom-box {
     position: absolute;
     width: 100%;
-    background: #fffaf0;
+    background: #fcfaf6;
     border: 1px solid #ccc;
     display: none;
     z-index: 1;
