--- a/css/header.css
+++ b/css/header.css
@@ -177,7 +177,20 @@ header ul li a:hover::before {
     color: #333;
 }
 
-
+.cartBtn span{
+    display: flex;
+    width: 15px;
+    height: 15px;
+    background: #eebe62;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    border-radius: 50%;
+    position: absolute;
+    top: 35%;
+    right: 30px;
+    font-size: 10px;
+}
 .searchBox.active {
     left: 0;
 
