--- a/css/pet-category.css
+++ b/css/pet-category.css
@@ -347,7 +347,7 @@ input[type="checkbox"]:checked:after {
 .product .product-image .image-product {
     height: 150px;
     width: auto;
-    transform: translateY(-7%);
+    transform: translateY(-10%);
 }
 .product .product-information {
     float: left;
@@ -363,6 +363,7 @@ input[type="checkbox"]:checked:after {
     font-size: 20px;
     font-weight: 700;
     text-align: left;
+    margin: 3% 0 5%;
 }
 .product .product-information .name-product {
     color: #000;
