--- a/css/Vet.css
+++ b/css/Vet.css
@@ -46,6 +46,11 @@
     color: white;
     box-shadow: 2px 2px 2px grey;
     font-size: 1.2rem;
+    border: none;
+    cursor: pointer;
+}
+.btn:hover{
+    background-color: #000;
 }
 .btn i{
     position: relative;
@@ -148,7 +153,7 @@
     top: 34vh;
     height: 1200px;
 }
-.menu{
+#menu{
     position: absolute;
     top: 235vh;
     width: 100%;
@@ -163,7 +168,11 @@
     position: relative;
     right: 10vw;
 }
-.menu table{
+.menu_option .btn_selecting{
+    background-color: #fc591e;
+    color: #fff;
+}
+#menu table{
     position: relative;
     background-color: #fff;
     border-radius: 30px;
@@ -171,8 +180,9 @@
     padding: 10px 50px;
     z-index: 1;
     font-size: 1.1rem;
+    display: block;
 }
-.menu td{
+#menu td{
     padding: 10px 40px;
 }
 .menu_left{
@@ -180,6 +190,16 @@
     position: absolute;
     text-align: center;
     top: 200px;
+}
+#surgery_menu{
+    position: relative;
+    width: 55vw;
+    display: none;
+}
+#cure_menu{
+    position: relative;
+    width: 56vw;
+    display: none;
 }
 .menu_right{
     position: absolute;
@@ -191,11 +211,14 @@
     color: white;
     background-color: black;
 }
+.menu_btn_booking:hover{
+    background-color: #fc591e;
+}
 .menu_img{
     position: absolute;
     width: 1000px;
-    top: 230px;
-    right: 560px;
+    top: 400px;
+    right: 41vw;
 }
 
 /* urgency */
@@ -275,6 +298,18 @@
     left: 100px;
     width: 200px;
 }
+.comment_img1{
+    position: absolute;
+    left: 100px;
+    top: 20px;
+    width: 200px;
+}
+.comment_img2{
+    position: absolute;
+    left: 100px;
+    top: 25px;
+    width: 230px;
+}
 .comment_box{
     background-color: #fff;
     border-radius: 30px;
@@ -284,6 +319,7 @@
     position: relative;
     left: 15%;
     top: -20px;
+    box-shadow: inset 5px 5px 10px gainsboro;
 }
 .comment_content{
     position: relative; 
@@ -312,29 +348,59 @@
 .comment_detail{
     padding-top: 30px;
 }
-.next_left{
+.comment_slider .dots{
     position: absolute;
-    left: 100px;
-    bottom: 120px;
-}
-.next_right{
-    position: absolute;
-    left: 90%;
-    bottom: 120px;
-}
-.num_pg_group{
+    bottom: 10px;
+    left: 0;
+    color: #fff;
+    width: 100%;
+    margin: 0;
+    padding: 0;
     display: flex;
+    justify-content: center;
+}
+.comment_slider .dots li{
+    list-style: none;
+    width: 15px;
+    height: 15px;
+    background-color: white;
+    margin: 10px;
+    border-radius: 20px;
+    transition: 0.5s;
+    cursor: pointer;
+    z-index: 1;
+}
+.comment_slider .dots li.active{
+    width: 30px;
+    background-color: #fc591e;
+}
+.comment_slider{
+    position: relative;
+    width: 100%;
+    margin: auto;
+    overflow: hidden;
+}
+.comment_box:nth-child(1){
+    display: block;
+}
+.comment_box:nth-child(2), .comment_box:nth-child(3){
+    display: none;
+}
+.comment_slider .buttons{
     position: absolute;
-    bottom: -20px;
-    left: 700px;
+    top: 40%;
+    left: 5%;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
 }
-.num_pg{
-    width: 20px;
-    height: 20px;
-    margin: 5px;
-    background-color: #fff;
-    border-radius: 50px;
+.comment_slider .buttons button{
+    background: none;
+    border: none;
+    font-weight: bold;
+    cursor: pointer;
 }
+
 #footer{
     position: relative;
     top: 45vh;
