--- a/css/Vet.css
+++ b/css/Vet.css
@@ -13,6 +13,12 @@
     padding: 20px 0;
     font-size: 1.2rem;
 }
+.address a{
+    color: #000;
+}
+.address a:visited{
+    color: #000;
+}
 .bg_overlay{
     background-image: url(../assets/backgrounds/bg-home-overlay.png);
     background-repeat: no-repeat;
