--- a/css/details.css
+++ b/css/details.css
@@ -20,6 +20,7 @@ a {
 
 /* Address */
 .address{
+    margin-top: 110px;
     padding: 25px 4%;
     text-align: left;
     font-family: Quicksand;
@@ -118,11 +119,12 @@ a {
     font-weight: bold;
     letter-spacing: 4px;
     font-size: 30px;
-    margin: 40px 0;
+    margin: 35px 0;
 }
 .infomation .quantity{
     display: flex;
     column-gap: 10px;
+    align-items: center;
 }
 .infomation .quantity-btn{
     display: flex;
@@ -131,9 +133,14 @@ a {
     border: 1px solid #D9D9D9;
     border-radius: 5px;
 }
-.infomation .quantity-btn *:not(.quantity-num){
-    padding: 5px 5px;
+.infomation .quantity-btn button{
+    padding: 8px 8px;
     cursor: pointer;
+    background: none;
+    border: none;
+}
+.infomation .quantity-btn button:hover{
+    background: #ccc;
 }
 .infomation .quantity-btn .quantity-num{
     border-left: 1px solid #D9D9D9;
