--- a/css/contact.css
+++ b/css/contact.css
@@ -3,9 +3,27 @@ body {
     margin: 0 0;
     background-color: #fffaf0;
     box-sizing: border-box;
-    font-size: 1.4rem;
+    /* font-size: 1.4rem; */
 }
 
+.bg_overlay {
+    content: "";
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-image: url(../assets/backgrounds/bg-home-overlay.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    z-index: -1;
+    /* Để overlay ở phía sau nội dung */
+}
+
+.form-img {
+    position: relative;
+    left: 10%;
+    height: 880px;
+}
 
 .page-ruler {
     margin-top: 9%;
@@ -37,8 +55,10 @@ body {
 }
 
 .form {
+    position: relative;
     width: 100%;
-    max-width: 820px;
+    max-width: 60%;
+    left: 18%;
     background-color: #fffaf0;
     border-radius: 10px;
     box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
@@ -289,15 +309,15 @@ textarea.input {
 .square {
     position: absolute;
     height: 400px;
-    top: 20%;
-    left: 52%;
+    top: 15%;
+    left: 55%;
     transform: translate(250%, 11%);
     opacity: 0.4;
 }
 
 .contact-deals {
     display: flex;
-    height: 300px;
+    height: 400px;
     width: 85%;
     background-color: #333;
     border-radius: 300px;
@@ -307,51 +327,50 @@ textarea.input {
 
 .deal-content {
     position: absolute;
-    bottom: 160px;
-    padding-left: 110px;
+    bottom: 10.5%;
+    padding-left: 7%;
     width: 27%;
-    font-size: 38px;
+    font-size: 2.3rem;
     font-family: 'Arima';
 }
 
 .deal-sub-content {
     position: absolute;
-    bottom: 110px;
-    padding-left: 40px;
+    bottom: 7%;
+    padding-left: 3%;
     padding-top: 7px;
     width: 50%;
-    font-size: 38px;
+    font-size: 2.3rem;
     font-family: 'Arima';
 
 }
 
 .deal-content-2 {
     position: absolute;
-    padding-left: 50%;
-    bottom: 10%;
+    padding-left: 48%;
+    bottom: 12%;
     width: 100%;
-    font-size: 35px;
-    font-weight: 900;
+    font-size: 2.3rem;
     font-family: 'Arima';
 }
 
 .deal-sub-content-2 {
     position: absolute;
-    bottom: 120px;
-    padding-left: 52%;
+    bottom: 9%;
+    padding-left: 50.5%;
     padding-top: 15px;
     width: 100%;
-    font-size: 25px;
+    font-size: 1.8rem;
     font-family: 'Arima';
 
 }
 
 .deal-code {
     position: absolute;
-    bottom: 70px;
-    padding-left: 54%;
+    bottom: 5%;
+    padding-left: 52.5%;
     width: 100%;
-    font-size: 25px;
+    font-size: 2rem;
     font-family: 'Arima';
 }
 
@@ -363,12 +382,102 @@ textarea.input {
 
 .ad-deal {
     position: relative;
-    margin-left: 25%;
-    top: 17%;
+    margin-left: 23%;
+    top: 13%;
 }
 
 .pet-sub-food {
     position: absolute;
     left: 43%;
     margin-top: 11%;
+}
+
+/* partner */
+.partner {
+    position: relative;
+    background: #FF8C4E;
+    height: 80vh;
+    font-size: 1.5rem;
+    background-image: url(../assets/backgrounds/bg-partner-overlay.png);
+}
+
+.partner>h1 {
+    position: relative;
+    text-align: center;
+    padding-top: 70px;
+}
+
+.partner>svg {
+    width: 90px;
+    height: 90px;
+    position: absolute;
+    fill: white;
+    left: 47%;
+    top: 50px;
+}
+
+.partner_list {
+    display: flex;
+    width: 100%;
+    animation: slide 40s infinite linear;
+}
+
+.partner_wrapper {
+    width: 85%;
+    overflow: hidden;
+    position: relative;
+    top: 10vh;
+    left: 7%;
+}
+
+@keyframes slide {
+    0% {
+        transform: translateX(0);
+    }
+
+    10% {
+        transform: translateX(-15%);
+    }
+
+    20% {
+        transform: translateX(-30%);
+    }
+
+    30% {
+        transform: translateX(-40%);
+    }
+
+    40% {
+        transform: translateX(-50%);
+    }
+
+    50% {
+        transform: translateX(-60%);
+    }
+
+    60% {
+        transform: translateX(-50%);
+    }
+
+    70% {
+        transform: translateX(-40%);
+    }
+
+    80% {
+        transform: translateX(-30%);
+    }
+
+    90% {
+        transform: translateX(-15%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+#footer {
+    position: absolute;
+    width: 100%;
+    top: 300vh;
 }
