--- a/css/header.css
+++ b/css/header.css
@@ -18,9 +18,9 @@ body {
     color: #FF6B35;
 }
 
-.arrow.active {
+/* #service-icon {
     color: #FF6B35;
-}
+} */
 
 
 header {
@@ -87,7 +87,7 @@ ul.dropdown a:hover {
 .dropdown li:hover {
     position: relative;
     background: #F2F2F2;
-    width: 250px;
+    width: 257px;
     left: -4.2%;
     border-left: 5px solid #FF6B35;
     padding-left: 15px;
