--- a/css/Grooming.css
+++ b/css/Grooming.css
@@ -4,7 +4,24 @@
     font-size: 1.5rem;
     background-color: #fffaf0;
 }
-
+.go_top_btn{
+    position: fixed;
+    bottom: 35px;
+    right: 35px;
+    cursor: pointer;
+    height: 70px;
+    width: 70px;
+    background: none;
+    border: none;
+    display: none;
+    justify-content: center;
+    align-content: center;
+    z-index: 99;
+}
+#to_top{
+    width: 70px;
+    height: 70px;
+}
 /* intro */
 .address{
     position: absolute;
