--- a/css/blog.css
+++ b/css/blog.css
@@ -6,7 +6,24 @@
     position: relative;
     top: 120px;
 }
-
+.go_top_btn{
+    position: fixed;
+    bottom: 35px;
+    right: 35px;
+    cursor: pointer;
+    height: 70px;
+    width: 70px;
+    background: none;
+    border: none;
+    display: none;
+    justify-content: center;
+    align-content: center;
+    z-index: 99;
+}
+#to_top{
+    width: 70px;
+    height: 70px;
+}
 
 .page-ruler {
     position: absolute;
