--- a/css/payment.css
+++ b/css/payment.css
@@ -9,6 +9,24 @@ body{
     background-color: #F5F5FA;
     font-family: Quicksand;
 }
+.go_top_btn{
+    position: fixed;
+    bottom: 35px;
+    right: 35px;
+    cursor: pointer;
+    height: 70px;
+    width: 70px;
+    background: none;
+    border: none;
+    display: none;
+    justify-content: center;
+    align-content: center;
+    z-index: 99;
+}
+#to_top{
+    width: 70px;
+    height: 70px;
+}
 .sub-title{
     font-size: 20px;
     font-weight: bold;
