--- a/css/Booking.css
+++ b/css/Booking.css
@@ -4,7 +4,24 @@
     font-size: 1.3rem;
     background-color: #fffaf0;
 }
-
+.go_top_btn{
+    position: fixed;
+    bottom: 35px;
+    right: 35px;
+    cursor: pointer;
+    height: 70px;
+    width: 70px;
+    background: none;
+    border: none;
+    display: none;
+    justify-content: center;
+    align-content: center;
+    z-index: 99;
+}
+#to_top{
+    width: 70px;
+    height: 70px;
+}
 .dog_img{
     width: 420px;
     position: absolute;
